Fixed a styling layout bug

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,8 @@ body,
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
+  height: 100%;
+  overflow: hidden;
 }
 
 img {
